<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="Item"
            type="com.sungbin.hyunnieserver.model.File" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_container"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_twice_half"
        android:layout_marginEnd="@dimen/margin_default"
        android:layout_marginBottom="@dimen/margin_twice_half">

        <ImageView
            android:id="@+id/iv_type"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/fileitem_type"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorPrimary"
            app:typeSrc="@{Item.fileType}"
            tools:src="@drawable/ic_baseline_folder_24" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@{Item.name}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_type"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/fileitem_preview_path" />

        <TextView
            android:id="@+id/tv_last_modify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{Item.lastModify}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/fileitem_preview_size" />

        <TextView
            android:id="@+id/tv_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fileitem_dot"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_last_modify" />

        <TextView
            android:id="@+id/tv_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{Item.size}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_dot"
            tools:text="@string/fileitem_preview_last_modify" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>