<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/srl_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_download_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            android:text="@string/download_downloaded_size"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_default"
            android:contentDescription="@string/image_description_clear"
            android:src="@drawable/ic_baseline_clear_24"
            app:layout_constraintBottom_toBottomOf="@+id/tv_download_size"
            app:layout_constraintEnd_toEndOf="@+id/tv_download_size"
            app:layout_constraintTop_toTopOf="@+id/tv_download_size" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_file"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_half"
            android:background="@color/colorBackgroundWhite"
            android:orientation="vertical"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_download_size"
            tools:listitem="@layout/layout_file"
            tools:visibility="gone" />

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/fbl_empty_file"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_half"
            android:visibility="gone"
            app:alignItems="center"
            app:flexDirection="column"
            app:justifyContent="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_download_size"
            tools:visibility="visible">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/empty_download" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_half"
                android:paddingTop="@dimen/margin_twice_half"
                android:paddingBottom="@dimen/margin_twice_half"
                android:text="@string/download_empty_downloaded"
                android:textSize="20sp" />

        </com.google.android.flexbox.FlexboxLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>